2010-06-02  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/producers/wms/digest.py:
	Backporting multi-bouncer branch from NTT.

2010-05-25  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/asf/asf.py:
	asf-muxer overrides configure_pipeline preventing the eaters to be
	linked. Call the base method from the subclass.

2010-05-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/muxers/asf/asf.py:
	Disable reconfigurable for asf muxer. It doesn't link and causes the
	muxer to flip-flop

2010-05-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/encoders/wma/wma.py:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/muxers/asf/asf.py:
	Reconfigurable encoders and muxers

2010-03-18  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_component_wms.py:
	Test handling cookies with multiple values, see r29458.

2010-03-18  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/test/test_component_wms.py:
	* flumotion/test/test_component_wms.py (added):
	Reset asf parser after a successful pushsetup request.  See #8273.

2010-03-17  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/producers/wms/wms.py:
	Set to INFO log level client connect/disconnect messages and
	initial server port binding/connect.

2010-03-15  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/producers/wms/wms.py:
	Use correct Twisted API to get the push-id value from the
	cookie. Original coding broken on cookie headers that contained more
	than one value, for instance "push-id=0; my-key=foo".
	It has been observed in the field, that sometimes WMS sends headers
	with push-id specified multiple times and with other cookie keys (like