@@ -1,3 +1,8 @@
+2010-06-22  Xavier Queralt Mateu  <xqueralt@flumotion.com>
+
+	* flumotion/component/producers/wms/asfparse.py:
+	Do not send reset event on EOS
+
 2010-06-02  Alvin Delagon  <adelagon@flumotion.com>
 
 	* flumotion/component/producers/wms/digest.py:
